--- a/about.html
+++ b/about.html
@@ -54,6 +54,7 @@
     <li>Sorry ! The Disney Edition. Board Game. (n.d.). Amazon. https://www.amazon.co.uk/Sorry-Disney-Board-Game/dp/B00005TNHC</li>
     <li>Sorry! Star Wars Edition. (n.d.). The Culture Cache. http://www.theculturecache.com/sorry---alternate-versions.html</li>
     <li>Games icon. (n.d.). Icon Finder. https://www.iconfinder.com/icons/3828903/boardgames_cross_and_circle_games_pawns_smash_pawns_sorry_icon</li> 
+    <li>Triple S Games. (2015, December 23). How to Play Sorry! [Video]. YouTube. https://www.youtube.com/watch?v=uMdylyrST6w</li>
   </ul>
 </div>
 </body>
